[gd_scene load_steps=7 format=3 uid="uid://cr02qjfnpuj3y"]

[ext_resource type="Script" uid="uid://dsirfslt4rrl4" path="res://Scenes/player.gd" id="1_4yfsw"]
[ext_resource type="Texture2D" uid="uid://bf6b6eopdmai4" path="res://player_tank.png" id="1_thf0f"]
[ext_resource type="PackedScene" uid="uid://u7kau5oe7and" path="res://Scenes/bullet.tscn" id="2_qo5pp"]
[ext_resource type="Texture2D" uid="uid://colt3g0abmkh6" path="res://tank_rocket.png" id="3_4yfsw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thf0f"]
size = Vector2(71.49791, 64.221924)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qo5pp"]

[node name="Node2D" type="Node2D" groups=["player"]]

[node name="tank" type="CharacterBody2D" parent="."]
script = ExtResource("1_4yfsw")
bullet_scene = ExtResource("2_qo5pp")

[node name="TurretPivot" type="Node2D" parent="tank"]
position = Vector2(40.349987, -65.650055)

[node name="PlayerTank_Turret" type="Sprite2D" parent="tank/TurretPivot"]
position = Vector2(25, -2)
scale = Vector2(0.08, 0.08)
texture = ExtResource("3_4yfsw")

[node name="Muzzle" type="Marker2D" parent="tank/TurretPivot"]
position = Vector2(47, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="tank"]
position = Vector2(41.349987, -56.650124)
scale = Vector2(0.75526637, 0.59169763)
shape = SubResource("RectangleShape2D_thf0f")

[node name="PlayerTank_Body" type="Sprite2D" parent="tank"]
position = Vector2(45.350002, -57.5)
scale = Vector2(0.1, 0.10037173)
texture = ExtResource("1_thf0f")

[node name="PowerBar" type="ProgressBar" parent="tank"]
z_index = 10
offset_left = 11.349987
offset_top = -29.650059
offset_right = 75.34999
offset_bottom = -2.6500587
theme_override_styles/fill = SubResource("StyleBoxFlat_qo5pp")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="FireCooldownTimer" type="Timer" parent="tank"]
